updated html and css

--- a/public/bodylight.html
+++ b/public/bodylight.html
@@ -172,8 +172,9 @@
           also helps smooth facial blemishes adn dramatically improves the complexion of skin damaged by acne or sun</p>
         <p>For a younger natural appearance, try Bodylight Facial Rejuvenation</p>
         <br>
-        <p class="statement">These statements have not been evaluated by the Food adn Drug Administration. This product
-          is not intended to diagnose, treat, cure or prevent any disease.</p>
+        <h6><em>*These statements have not been evaluated by the Food and Drug
+            Administration. This product
+            is not intended to diagnose, treat, cure or prevent any disease.</em></h6>
 
       </div>
 
