updated HTML and CSS

--- a/public/massage.html
+++ b/public/massage.html
@@ -98,7 +98,7 @@
 
         <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
           alt="Kirsten Lavers">
-        <h2>Kirsten Lavers,<span style="color:#3E7CF9"> Certified Massage Therapist</span></h2>
+        <h2>Kirsten Lavers,<span style="color:#3E7CF9"> <br>Certified Massage Therapist</span></h2>
         <p>Kirsten graduated from the Massage Therapy progam at Colby Community College in 2014. She is certified in
           many modalities of massage including Swedish, Hot Stone, Deep Tissue, and Reflexology. When not working,
           Kirsten can be found reading, playing with her dogs, or taking a nap. With many family of her family members
