--- a/public/patientdownloads.html
+++ b/public/patientdownloads.html
@@ -86,7 +86,8 @@
         <img src="./pictures/Sarahgreetingpatient.jpg" class="img-responsive mb-4" style="width: 100%"
           alt="Doctor Visit">
         <h2>Patient Downloads</h2>
-        <p>Welcome to the world of Electronic Health Recordkeeping. Unger Chiropractic Clinic has created a secure
+        <p>Welcome to the world of Electronic Health Recordkeeping. <strong>Unger Chiropractic Clinic</strong> has
+          created a secure
           electronic patient
           record for you.</p>
         <div class="bg-light p-5 mb-4">
