--- a/public/cdlMedicalExam.html
+++ b/public/cdlMedicalExam.html
@@ -1,126 +1,247 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Unger Chiropractic</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <!-- Own CSS -->
-    <link rel="stylesheet" href="/css/index.css" />
-  </head>
 
-  <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Unger Chriopractic</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Unger Chiropractic</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- font awesome css -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- Google Fonts CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+  <!-- Own CSS -->
+  <link rel="stylesheet" href="./css/index.css" />
+
+</head>
+
+<body>
+  <!-- Navigation -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Unger Chiropractic</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ourDoctors.html">Our Doctors</a>
+            <a class="nav-link" href="services.html" target="blank">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="bodylight.html"
-              >Bodylight Fat Reduction</a
-            >
+            <a class="nav-link" href="./massage.html" target="blank">Massage</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="massage.html">Massage</a>
+            <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="firstVisit.html">First Visit</a>
+            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contactUs.html">Contact Us</a>
+            <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cdlMedicalExam.html">CDL Medical Exam</a>
+            <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
           </li>
+          <!-- Social Icons -->
+          <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
+                class="fab fa-facebook"></i></a></li>
+          <!-- /.row -->
         </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- CDL Medical Exam Section-->
+  <!-- Header -->
+  <header class="py-5 mb-5" id="title-bar">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-lg-12">
+          <h1 class=" mb-2 text-center" id="titlebar-heading">CDL Medical Exam</h1>
+          </p>
+        </div>
+      </div>
+    </div>
+  </header>
 
-    <section id="cdlMedicalExam">
-      <h1>CDL Medical Exam</h1>
+  <!-- / Row -->
 
-      <p class="bold">
-        Dr. Ryan R. Unger, D.C. and Dr. Shannon R. Addleman, D.C. are both
-        certified medical examiners for DOT driver physicals. We are available 5
-        days a week and 2 Saturdays a month for appointments in 2 locations.
-        With the new guidelines for medical certification we are attaching an
-        employer and driver checklist that will help prevent delays in
-        qualification.
-      </p>
+  <!-- Page Content -->
+  <div class="container">
 
-      <h5>Employer Checklist:</h5>
-      <h5>Driver Checklist:</h5>
+    <div class="row">
+      <div class="col-md-8 mb-5">
+        <img src="./pictures/Semi.jpg" class="img-responsive mb-4" style="width: 100%" alt="Chiropractor Treatment">
+        <h2>DOT Driver Physicals</h2>
+        <p>Dr. Ryan R. Unger, D.C. and Dr. Shannon R. Addleman, D.C. are both
+          certified medical examiners for DOT driver physicals. We are available 5
+          days a week and 2 Saturdays a month for appointments in 2 locations.
+          With the new guidelines for medical certification we are attaching an
+          employer and driver checklist that will help prevent delays in
+          qualification.</p>
 
-      <h5>If you have been diagnosed with:</h5>
-      <ul>
-        <li>Adult ADD/ADHD</li>
-        <li>Have a history of seizures/nurological issues</li>
-        <li>Heart conditions</li>
-        <li>Diabetes</li>
-      </ul>
-      <h5>
-        Please contact our office for further instructions before your
-        appointment date.
-      </h5>
+        <h2>Employer Checklist:</h2>
+        <p>Employer Checklist PDF<a href="./pictures/Employer_DOT_checklist.pdf" class="button"
+            alt="Employer DOT Checklist PDF" download>
+            <i class="fa fa-download text-dark"></i></a>
+        </p>
+        <h2>Driver Checklist:</h2>
+        <p>Driver Checklist PDF<a href="./pictures/CDL_DRIVER_Applicant.pdf" class="button"
+            alt="CDL Driver Applicant PDF" download>
+            <i class="fa fa-download text-dark"></i></a>
+        </p>
+        <div class="bg-light p-5 mb-4">
+          <p class="bold">If you have been diagnosed with any of the following conditions, please contact our office for
+            further instructions before
+            your appointment date.:</p>
+          <p class="bold"><i class="fas fa-asterisk"></i>
+            <span style="color:#3E7CF9">Adult ADD/ADHD</span>
+          </p>
+          <p class="bold"><i class="fas fa-asterisk"></i>
+            <span style="color:#3E7CF9">Have a history of seizures/neurological issues</span>
+          </p>
+          <p class="bold"><i class="fas fa-asterisk"></i>
+            <span style="color:#3E7CF9">Heart conditions</span>
+          </p>
+          <p class="bold"><i class="fas fa-asterisk"></i>
+            <span style="color:#3E7CF9">Diabetes</span>
+          </p>
+          <p>After schuduling your appointment with us, please fill out the following form and bring it with you
+            (<strong>first page only</strong>):</p>
+          <p>Medical Examination Report
+            FOR COMMERCIAL DRIVER FITNESS DETERMINATION PDF:<a
+              href="./pictures/Medical_Examination_Report_for_Commercial_Driver_Fitness_Determination_649-F(6045).pdf"
+              class="button" alt="Medical Examination Report PDF" download>
+              <i class="fa fa-download text-dark"></i></a></p>
+        </div>
+      </div>
 
-      <h5>
-        Please fill out this form and bring it with you to your appointment
-        (first page only)
-      </h5>
-      <a
-        href="http://www.fmcsa.dot.gov/sites/fmcsa.dot.gov/files/docs/Medical_Examination_Report_for_Commercial_Driver_Fitness_Determination_649-F%286045%29.pdf"
-        ><button type="button" class="btn btn-dark btn-lg">
-          Click here for form
-        </button></a
-      >
-    </section>
+      <!-- Sidebar -->
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
+      <div class="col-md-4 mb-5 ">
+        <h2>Contact Us</h2>
+        <hr>
+        <address>
+          <strong><span style="color:#13315C">Oberlin Clinic</span></strong>
+          <br>504 N Penn Ave
+          <br>Oberlin, KS 67749
+          <br>Phone: (785) 475-2219
+          <br>Fax: (785) 475-2219
+        </address>
+        <address>
+          <strong><span style="color:#13315C">St. Francis Clinic</span></strong>
+          <br>120 N Scott St
+          <br>St. Francis, KS 67756
+          <br>Phone: (785) 332-2186
+        </address>
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours &raquo;</a>
 
-    <!-- Own Javascript -->
-    <script src="/js/index.js"></script>
-  </body>
+      </div>
+      <!-- /Sidebar -->
+    </div>
+  </div>
+
+
+
+  <!-- Weather Widget -->
+
+  <a class="weatherwidget-io" href="https://forecast7.com/en/39d82n100d53/oberlin/?unit=us" data-label_1="OBERLIN"
+    data-label_2="WEATHER" data-theme="original">OBERLIN WEATHER</a>
+  </div>
+
+  <!-- /.row -->
+
+  <!-- Footer -->
+  <footer class="py-5">
+
+    <div class="container pt-3">
+      <div class="row">
+        <!-- Column 1 -->
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Unger Chiropractic</h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <p>Your journey to superior healing and total wellness can begin today.</p>
+          <p>We do not discriminate. Please view our policy. Unger Chiropractic Nondiscrimination
+            policy.pdf&nbsp;<a href="#" class="button" download>
+              <i class="fa fa-download text-white"></i></a>
+          </p>
+        </div>
+        <!-- Column 2 -->
+        <div class="col-md-4">
+          <h6><strong>Useful Links</strong></h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <nav class="nav flex-column pb-4">
+            <a class="nav-link pl-0" href="./ourDoctors.html" target="blank">Our Doctors</a>
+            <a class="nav-link pl-0" href="./services.html" target="blank">Services</a>
+            <a class="nav-link pl-0" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
+            <a class="nav-link pl-0" href="./massage.html" target="blank">Massage</a>
+            <a class="nav-link pl-0" href="./firstVisit.html" target="blank">First Visit</a>
+            <a class="nav-link pl-0" href="./" target="blank">Patient Downloads</a>
+            <a class="nav-link pl-0" href="./cdlMedicalExam.html" target="blank">CDL Medical Exams</a>
+          </nav>
+        </div>
+        <hr>
+        <!-- Column 3 -->
+        <div class="col-md-4">
+          <h6><strong>Contact</strong></h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <h6><strong>Oberlin Clinic:</strong></h6>
+          <p>504 N Penn Ave
+            Oberlin, KS 67749<br>
+            Phone: (785) 475-2219<br>
+            Fax: (785) 475-2210
+          </p>
+          <h6><strong>St. Francis Clinic:</strong></h6>
+          <p>120 N Scott St
+            St. Francis, KS 67756<br>
+            Phone: (785) 332-2186
+          </p>
+          <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
+              class="fab fa-facebook-f"></i>
+
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- /.container -->
+
+  <!-- Copyright -->
+  <footer class="py-2 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic. All rights
+        reserved.</p>
+  </footer>
+  <!-- /.container -->
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+  </script>
+
+  <!-- Own Javascript -->
+  <script src="./js/index.js"></script>
+  </div>
+</body>
+
+
 </html>
