Updated HTML and CSS

--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -1,159 +1,263 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Unger Chiropractic</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <!-- Own CSS -->
-    <link rel="stylesheet" href="/css/index.css" />
-  </head>
 
-  <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Unger Chriopractic</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Unger Chiropractic</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- font awesome css -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- Google Fonts CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+  <!-- Own CSS -->
+  <link rel="stylesheet" href="./css/index.css" />
+
+</head>
+
+<body>
+  <!-- Navigation -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Unger Chiropractic</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ourDoctors.html">Our Doctors</a>
+            <a class="nav-link" href="services.html" target="blank">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="bodylight.html"
-              >Bodylight Fat Reduction</a
-            >
+            <a class="nav-link" href="./massage.html" target="blank">Massage</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="massage.html">Massage</a>
+            <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="firstVisit.html">First Visit</a>
+            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contactUs.html">Contact Us</a>
+            <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cdlMedicalExam.html">CDL Medical Exam</a>
+            <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
           </li>
+          <!-- Social Icons -->
+          <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
+                class="fab fa-facebook"></i></a></li>
+          <!-- /.row -->
         </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- Contact Us Section -->
-    <section id="contactUs">
-      <h1>Contact Us</h1>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <h3>Oberlin Clinic</h3>
-            <h5>504 N Penn Ave</h5>
-            <h5>Oberlin, KS 67749</h5>
-            <h5>Phone: (785) 475-2219</h5>
-            <h5>Fax: (785) 475-2210</h5>
-
-            <h3>Oberlin Office Hours:</h3>
-            <p>
-              Dr. Unger available Monday (PM), Tuesday (All Day), and Thursday
-              (All Day).
-            </p>
-            <p>
-              Dr. Addleman available Monday (AM), Wednesday (AM), Thursday (AM)
-              and Friday (All Day).
-            </p>
-
-            <ul>
-              <li>Monday: 8:30am to 6:00pm</li>
-              <li>Tuesday: 7:30am to 6:00pm</li>
-              <li>Wednesday: 8:30am to 6:00pm</li>
-              <li>Thursday: 8:30am to 6:00pm</li>
-              <li>Friday: 8:30am to 4:00pm</li>
-              <li>Two Saturdays a Month: 9:00am to 1:00pm</li>
-            </ul>
-          </div>
-
-          <div class="col-sm">
-            <h3>St. Francis Clinic</h3>
-            <h5>120 N Scott St</h5>
-            <h5>St. Francis, KS 67756</h5>
-            <h5>Phone: (785) 332-2186</h5>
-
-            <h3>St. Francis Office Hours:</h3>
-            <p class="bold">Dr. Unger</p>
-            <ul>
-              <li>Monday: 8:30am to 12:00pm</li>
-              <li>Wednesday: 1:00pm to 5:00pm</li>
-              <li>Friday: 8:30am to 3:00pm</li>
-            </ul>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm">
-            <h3>Oberlin Clinic</h3>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.225700031252!2d-100.53135254880837!3d39.824357079337425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x879fe75357a3ea63%3A0xc362ca715da9e08f!2sUnger+Chiropractic!5e0!3m2!1sen!2sus!4v1553145178811"
-              width="337"
-              height="252"
-              frameborder="0"
-              style="border:0"
-              allowfullscreen
-            ></iframe>
-          </div>
-          <div class="col-sm">
-            <h3>St. Francis Clinic</h3>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3066.4383085162644!2d-101.80357754880973!3d39.774717979344004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x877496a6f87995c1%3A0xf1a86a62a2c00a1d!2sUnger+Chiropractic+Clinic!5e0!3m2!1sen!2sus!4v1553145107505"
-              width="337"
-              height="252"
-              frameborder="0"
-              style="border:0"
-              allowfullscreen
-            ></iframe>
-          </div>
+  <!-- Header -->
+  <header class="py-5 mb-5" id="title-bar">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-lg-12">
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Contact</h1>
+          </p>
         </div>
       </div>
-    </section>
+    </div>
+  </header>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
+  <!-- / Row -->
 
-    <!-- Own Javascript -->
-    <script src="/js/index.js"></script>
-  </body>
+  <!-- Page Content -->
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="text-center">Get in touch with us!</h2>
+        <p class="text-center">Our availability at each location varies. Please contact us at your desired location and
+          we'll get back to
+          you as soon as possible.</p>
+      </div>
+    </div>
+
+    <!-- Oberlin Office -->
+
+    <div class="row mt-5">
+      <div class="col-md-5 mb-5 pr-3">
+        <h2 class="mb-4">Oberlin Clinic</h2>
+        <h4>Oberlin Office Address</h4>
+        <address>
+          <p>504 N Penn Ave<br>
+            Oberlin, KS 67749<br>
+            Phone: (785) 475-2219<br>
+            Fax: (785) 475-2219</p>
+        </address>
+        <h4>Oberlin Office Hours</h4>
+        <p><span style="color:#3E7CF9">Dr. Unger</span> is available: Monday PM-Tuesday all day and Thursday all
+          day.<br>
+          <span style="color:#3E7CF9">Dr. Addleman</span> is available: Monday, Wednesday, Thursday AM, and Friday.</p>
+        <p><strong>Monday -</strong> 8:30 A.M. - 6:00 P.M.<br>
+          <strong>Tuesday -</strong> 7:30 A.M. - 6:00 P.M.<br>
+          <strong>Wednesday -</strong> 8:30 A.M. - 6:00 P.M.<br>
+          <strong>Thursday -</strong> 8:30 A.M. - 6:00 P.M.<br>
+          <strong>Friday -</strong> 8:30 A.M. - 4:00 P.M.<br>
+          <strong>Two Saturdays a month - </strong> 8:30 A.M. - 4:00 P.M.</p><br>
+
+        <!-- March Callout -->
+
+        <div class="march-callout">
+          <p><strong>March Saturdays:</strong></p>
+          <p>March 9th - Dr. Addleman & Kirsten Lavers, CMT <br>
+            March 23 - Dr. Addleman & Kirsten Lavers, CMT </p>
+        </div>
+
+        <!-- Get Directions -->
+
+        <h4 class="mt-5">Oberlin Clinic Directions</h4>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.225700031252!2d-100.53135254880837!3d39.824357079337425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x879fe75357a3ea63%3A0xc362ca715da9e08f!2sUnger+Chiropractic!5e0!3m2!1sen!2sus!4v1553145178811"
+            frameborder="0" width="100" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <!-- / Oberline Office -->
+
+
+      <div class="col-md-2"></div>
+
+
+      <!-- St. Francis Office -->
+
+      <div class="col-md-5 mb-5 pl-3 ">
+        <h2 class="mb-4">St. Francis Clinic</h2>
+        <h4>St. Francis Office Address</h4>
+        <address>
+          <p>120 N Scott St<br>
+            St. Francis, KS 67756<br>
+            Phone: (785) 332-2186<br>
+            <br>
+          </p>
+        </address>
+        <h4>St. Francis Office Hours</h4>
+        <p><span style="color:#3E7CF9">Dr. Unger</span> is available at this location:
+          <p><strong>Monday -</strong> 8:30 A.M. - 12:00 P.M.<br>
+            <strong>Wednesday -</strong> 1:00 P.M. - 5:00 P.M.<br>
+            <strong>Friday -</strong> 8:30 A.M. - 3:00 P.M.<br>
+            <!-- Get Directions -->
+
+            <h4 class="mt-5">St. Francis Clinic Directions</h4>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.225700031252!2d-100.53135254880837!3d39.824357079337425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x879fe75357a3ea63%3A0xc362ca715da9e08f!2sUnger+Chiropractic!5e0!3m2!1sen!2sus!4v1553145178811"
+                frameborder="0" width="100" style="border:0" allowfullscreen></iframe>
+            </div>
+      </div>
+      <!-- / St. Francis Office -->
+
+    </div>
+  </div>
+  </div>
+
+
+
+  <!-- Weather Widget -->
+
+  <a class="weatherwidget-io" href="https://forecast7.com/en/39d82n100d53/oberlin/?unit=us" data-label_1="OBERLIN"
+    data-label_2="WEATHER" data-theme="original">OBERLIN WEATHER</a>
+  </div>
+
+  <!-- /.row -->
+
+  <!-- Footer -->
+  <footer class="py-5">
+
+    <div class="container pt-3">
+      <div class="row">
+        <!-- Column 1 -->
+        <div class="col-md-4">
+          <h6 class="font-weight-bold">Unger Chiropractic</h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <p>Your journey to superior healing and total wellness can begin today.</p>
+          <p>We do not discriminate. Please view our policy. Unger Chiropractic Nondiscrimination
+            policy.pdf&nbsp;<a href="#" class="button" download>
+              <i class="fa fa-download text-white"></i></a>
+          </p>
+        </div>
+        <!-- Column 2 -->
+        <div class="col-md-4">
+          <h6><strong>Useful Links</strong></h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <nav class="nav flex-column pb-4">
+            <a class="nav-link pl-0" href="./ourDoctors.html" target="blank">Our Doctors</a>
+            <a class="nav-link pl-0" href="./services.html" target="blank">Services</a>
+            <a class="nav-link pl-0" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
+            <a class="nav-link pl-0" href="./massage.html" target="blank">Massage</a>
+            <a class="nav-link pl-0" href="./firstVisit.html" target="blank">First Visit</a>
+            <a class="nav-link pl-0" href="./" target="blank">Patient Downloads</a>
+            <a class="nav-link pl-0" href="./cdlMedicalExam.html" target="blank">CDL Medical Exams</a>
+          </nav>
+        </div>
+        <hr>
+        <!-- Column 3 -->
+        <div class="col-md-4">
+          <h6><strong>Contact</strong></h6>
+          <div class="h-divider mt-3 mb-3 w-50"></div>
+          <h6><strong>Oberlin Clinic:</strong></h6>
+          <p>504 N Penn Ave
+            Oberlin, KS 67749<br>
+            Phone: (785) 475-2219<br>
+            Fax: (785) 475-2210
+          </p>
+          <h6><strong>St. Francis Clinic:</strong></h6>
+          <p>120 N Scott St
+            St. Francis, KS 67756<br>
+            Phone: (785) 332-2186
+          </p>
+          <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
+              class="fab fa-facebook-f"></i>
+
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- /.container -->
+
+  <!-- Copyright -->
+  <footer class="py-2 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic. All rights
+        reserved.</p>
+  </footer>
+  <!-- /.container -->
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+  </script>
+
+  <!-- Own Javascript -->
+  <script src="./js/index.js"></script>
+  </div>
+</body>
+
+
 </html>
