--- a/public/bodylight.html
+++ b/public/bodylight.html
@@ -22,47 +22,48 @@
 <body>
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Unger Chiropractic</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html" target="blank">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./massage.html" target="blank">Massage</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
-          </li>
-          <!-- Social Icons -->
-          <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
-                class="fab fa-facebook"></i></a></li>
-          <!-- /.row -->
-        </ul>
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Unger Chiropractic</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+          data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                href="./services.html" target="blank" aria-expanded="false">Services</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
+                <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
+                <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
+                <a class="dropdown-item" href="./massage.html">Massage</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
+            </li>
+            <!-- Social Icons -->
+            <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
+                  class="fab fa-facebook"></i></a></li>
+            <!-- /.row -->
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
   <!-- Header -->
   <header class="py-5 mb-5" id="title-bar">
