--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,15 @@
           <li class="nav-item">
             <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html" target="blank">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./massage.html" target="blank">Massage</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+              href="./services.html" target="blank" aria-expanded="false">Services</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
+              <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
+              <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
+              <a class="dropdown-item" href="./massage.html">Massage</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
