--- a/public/chiropractictreatment.html
+++ b/public/chiropractictreatment.html
@@ -34,14 +34,15 @@
           <li class="nav-item">
             <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html" target="blank">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./massage.html" target="blank">Massage</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+              href="./services.html" target="blank" aria-expanded="false">Services</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
+              <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
+              <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
+              <a class="dropdown-item" href="./massage.html">Massage</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
@@ -69,7 +70,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Services</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Chiropractic Treatment</h1>
           </p>
         </div>
       </div>
