Updated HTML and CSS

--- a/public/beforeandafter.html
+++ b/public/beforeandafter.html
@@ -83,86 +83,61 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-8 mb-5">
-        <img src="./pictures/DoctorVisit.jpg" class="img-responsive mb-4" style="width: 100%" alt="Doctor Visit">
-        <h2>Consultation</h2>
-        <p>On your first visit to our office you will be welcomed by our receptionist with a warm smile. You will then
-          be asked to fill out our required forms which will help us gain some information about yourself and your
-          spinal health. Save time by filling out the forms ahead of time. <a href="./patientdownloads.html">Click
-            Here!</a>
 
-          After reviewing your case history, you and the doctor will discuss your condition to determine if chiropractic
-          care may be of benefit to you. If we find that your condition would be better served by another physician, you
-          will be referred to a doctor that will be able to help you the most. However, if our doctor feels he can help
-          you, we will begin our examination with your consent. Through out this process, our focus is to help you
-          achieve your optimal health potential.</p>
-        </row>
+      <!-- Picture 1 -->
 
-        <div class="row">
-          <div class="col-md-12 mt-5 p-5 bg-light">
-            <h2>Examination</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-            <p>After a thorough consultation with the doctor, you will undergo a chiropractic
-              examination. This will
-              include
-              testing your reflexes and range of motion as well as other standard orthopedic, neurologic, postural, and
-              physical examinations. From this, the doctor will gain valuable information regarding your condition and a
-              better understanding of how chiropractic can help you. If necessary, the doctor may recommend X-rays or
-              refer
-              you for additional testing procedures.</p>
+      <div class="col-md-8">
+        <figure class="figure mb-5">
+          <img src="./pictures/SlimCo_1.jpg" class="figure-img img-fluid rounded data-toggle"
+            alt="A generic square placeholder image with rounded corners in a figure.">
+          <img src="./pictures/SlimCo_2.jpg" class="figure-img img-fluid rounded data-toggle"
+            alt="A generic square placeholder image with rounded corners in a figure.">
+          <div class="row">
+            <div class="col-12 align-self-start">SM BEFORE. After 9 treatments. 10.75 inches lost. </div>
           </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 p-5">
-            <h2>X-Ray</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-
-            <p>X-rays are sometimes required to get a full evaluation of a patient's condition. The need for X-ray is
-              considered on a case by case basis. However, if needed, our office has an on-site, state of the art x-ray
-              facility for your convenience.</p>
+        </figure>
+        <!-- Picture 3 -->
+        <figure class="figure mb-5">
+          <img src="./pictures/SlimCo_3.jpg" class="figure-img img-fluid rounded data-toggle"
+            alt="A generic square placeholder image with rounded corners in a figure.">
+          <div class="row">
+            <div class="col-12 align-self-start">JR BEFORE. After 9 treatments. 8.50 inches lost. </div>
           </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 p-5 bg-light">
-            <h2>Spinal Adjustment</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-            <p>If both you and the doctor decide that chiropractic care is appropriate, spinal adjustments will begin
-              immediately. Other treatment may include low level laser, physical therapies , and/or soft tissue
-              therapies.
-              Most of our patients begin to see results from the very first spinal adjustment. Our special gentle, yet
-              effective, alignment of the body is interactive with the patient; gentle enough for kids, yet able to
-              restore
-              function and movement for the athlete and senior.</p>
+        </figure>
+        <!-- Picture 4 -->
+        <figure class="figure mb-5">
+          <img src="./pictures/SlimCo_4.jpg" class="figure-img img-fluid rounded data-toggle"
+            alt="A generic square placeholder image with rounded corners in a figure.">
+          <div class="row">
+            <div class="col-12 align-self-start">LB BEFORE. After 9 treatments. 7.0 inches lost. </div>
           </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 p-5 ">
-
-            <h2>Home Instructions</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-            <p>Prior to leaving, patients will be given instructions on certain activities or procedures to be conducted
-              at home. This may include ice or heat application instructions, avoidance of certain activities or
-              positions, as well as home exercises and/or stretches.</p>
+        </figure>
+        <!-- Picture 5 -->
+        <figure class="figure mb-5">
+          <img src="./pictures/SlimCo_5.jpg" class="figure-img img-fluid rounded data-toggle"
+            alt="A generic square placeholder image with rounded corners in a figure.">
+          <div class="row">
+            <div class="col-12 align-self-start">RP BEFORE. After 9 treatments. 9.25 inches lost. </div>
           </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 mb-2 p-5 bg-light">
-            <h2>Schedule Your Appointment</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-
-            <p>You will be given a convenient appointment time for your follow-up visit. Generally speaking, patients
-              are seen within 1-2 days and are provided with a complete review of findings.</p>
+        </figure>
+        <!-- Picture 7 -->
+        <figure class="figure mb-5">
+          <img src="./pictures/SlimCo_6.jpg" class="figure-img img-fluid rounded data-toggle"
+            alt="A generic square placeholder image with rounded corners in a figure.">
+          <div class="row">
+            <div class="col-12 align-self-start">SK BEFORE. After 9 treatments. 6.75 inches lost. </div>
           </div>
-        </div>
+        </figure>
+        <!-- Picture 8 -->
+        <figure class="figure mb-5">
+          <img src="./pictures/SlimCo_7.jpg" class="figure-img img-fluid rounded data-toggle"
+            alt="A generic square placeholder image with rounded corners in a figure.">
+          <img src="./pictures/SlimCo_8.jpg" class="figure-img img-fluid rounded data-toggle"
+            alt="A generic square placeholder image with rounded corners in a figure.">
+          <div class="row">
+            <div class="col-12 align-self-start">TM BEFORE. After 9 treatments. 6.75 inches lost. </div>
+          </div>
+        </figure>
 
       </div>
 
@@ -186,7 +161,38 @@
           <br>Phone: (785) 332-2186
         </address>
         <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours &raquo;</a>
-
+        <br>
+        <!-- Price Card 1-->
+        <div class="card mb-5 mb-lg-0 mt-5">
+          <div class="icon mt-3 text-center"><img src="./pictures/weight-scale.png"></div>
+          <div class="card-body pricing">
+            <h5 class="card-title text-center mt-0">Expedited Bodylight Session</h5>
+            <h6 class="card-price text-center"><span style="color: #13315C;">$50</span></h6>
+            <hr>
+            <i class="fas fa-check"></i><span>&nbsp 15 Minute Bodylight</span>
+            <br>
+            <i class="fas fa-check"></i></span>&nbsp 10 minute Vibrator Plate</span>
+            <a href="./contactUs.html" class="btn btn-block btn-primary text-uppercase mt-3" target="_blank">Contact
+              Us</a>
+          </div>
+        </div>
+        <!-- /Price Card -->
+        <div class="card mb-5 mb-lg-0 mt-5">
+          <div class="icon mt-3 text-center"><img src="./pictures/measuring-tape.png"></div>
+          <div class="card-body pricing">
+            <h5 class="card-title  text-center mt-0">Complete Bodylight Session</h5>
+            <h6 class="card-price text-center"><span style="color: #13315C;">$65</span></h6>
+            <hr>
+            <i class="fas fa-check"></i><span>&nbsp 15 minute Bodylight</span>
+            <br>
+            <i class="fas fa-check"></i></span>&nbsp 10 minute Vibrator Plate</span>
+            <br>
+            <i class="fas fa-check"></i></span>&nbsp 15 minute Erchonia EB footbath</span>
+            <a href="./contactUs.html" class="btn btn-block btn-primary text-uppercase mt-3" target="_blank">Contact
+              Us</a>
+          </div>
+        </div>
+        <!-- /Price Card -->
       </div>
       <!-- /Sidebar -->
     </div>
