--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -119,8 +119,8 @@
 
         <div class="march-callout">
           <p><strong>March Saturdays:</strong></p>
-          <p>March 9th - Dr. Addleman & Kirsten Lavers, CMT <br>
-            March 23 - Dr. Addleman & Kirsten Lavers, CMT </p>
+          <p><strong>March 9th</strong> - Dr. Addleman & Kirsten Lavers, CMT <br>
+            <strong>March 23</strong> - Dr. Addleman & Kirsten Lavers, CMT </p>
         </div>
 
         <!-- Get Directions -->
